  built-in is enabled. This will permit to separate the HTTP built-in in a
  different package.
- Added French translation to monthly reports.
        (thanks to Sylvain Gomez, sylvaingomez AT free.fr)
- Added support of Postgrey (Postfix Greylisting) in 'mail.pm'. [#102]
        (thanks to Malte Kubat, M.Kubat AT csb-it.de)
- Updated to 4.01 the HTML DOCTYPE declarations.
- Added more precision to the values in 'gensens.pm.
- Added string encoding to avoid the message 'Wide character in print at
  ./monitorix.cgi line ...'. [#186]
- Added to force a standard locale in 'port.pm'. in order to be able for
  Monitorix to read the output of system commands (netstat, ...). [#186]
- Added the new option 'stats_rate' in 'mail.pm' to be able to choose between
  'real' (new default) and 'per_second'.
- Fixed an undeclared global symbol "$imgfmt_lc" in 'traffacct.pm'.
- Fixed the MIME type of graphs in 'emailreports.pm' and in 'traffacct.pm' to
  honor the 'image_format' option. [#174]
- Make whole word and radio button clickable. [#185]
- Fixed in 'emailreports.pm' to name each attached graph correctly.
- Fixed the message 'Odd number of elements in hash assignment' in
  HTTPServer.pm line 58, generated by a malformed line in the 'htpasswd' file.
  Now it warns about such malformed line in the HTTP built-in log.
- Fixed to honour the change of names in the zoomed in graph of Cores. [#183]
- Fixed the title in the header of the page to match with the current 'when='
  value.


3.9.0  - 14-Oct-2016
====================
- Added a complete graph for Linux Traffic Control with the 'tc' command. [#74]
- Added a complete graph for Chrony using the 'chronyc' command.
- Added a complete graph for generic sensors (in /sys/devices). [#159]
- Added the option 'cmd' in 'libvirt.pm' in order to be able to execute a
  custom command like 'virsh -r -c qemu:///session'.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)