@@ -220,6 +220,8 @@ secure_log_date_format = %b %e
 		temp0 = Temperature Zone 0
 		cpu0 = CPU0 frequency
 	</map>
+	<alerts>
+	</alerts>
 	rigid = 0, 0
 	limit = 100, 100
 </gensens>
